--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1351"
+       "0.13548"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "0.1353352832366127"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.32518"
+       "0.3253"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "0.32332358381693654"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.86588"
+       "0.86405"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "0.8646647167633873"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,16 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.493698859255441"
+       "3.4929365758845794"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "3.4934560880854417"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,16 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.6897445162826483"
+       "2.685818110858662"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "2.689069983151863"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,16 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.843136296092573"
+       "2.840834813897092"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "2.842679846187588"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,16 +306,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.4948239265401644"
+       "3.494952025315167"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "3.4934560880854417"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,16 +354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.02182"
+       "0.02204"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "0.02194293045425609"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,16 +404,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.45709"
+       "0.45188"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,8 +423,9 @@
     "#experimental\n",
     "#I first needed to figure out how many answer choices the student could randomly pick from\n",
     "#I figured this out with simple math, there are up to the hundreth decimal place, each place has 10 numbers\n",
-    "# 10 * 10 is 100 and there are 100 answer choices so in total, there are 10,000 answer options in all\n",
+    "# 10 * 10 is 100 and there are 100 answer choices so in total, there are 100 answer options for each 100 questions\n",
     "chance = 1 / 100\n",
+    "#Then we want to see only the first 60 questions, so I set the binomial function to 60\n",
     "answers = np.random.binomial(60, chance, 100000)\n",
     "got_one_right = answers >= 1\n",
     "got_one_right.mean()"
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -441,23 +442,435 @@
        "0.4528433576092388"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Theoretical\n",
+    "#Same concept as above but used stats binomial instead, then I used the sf to return the probability for anything greater than 1 answer right\n",
     "s_got_one_right = stats.binom(60, chance).sf(0)\n",
     "s_got_one_right"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.83494"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#5a\n",
+    "#Experimental\n",
+    "num_of_students = round(3 * 22 * .9)\n",
+    "breakroom = np.random.choice([1, 0], size= (100000, num_of_students), p = [.03, .97])\n",
+    "clean_room = (breakroom.sum(axis=1)) > 0\n",
+    "clean_room.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8342199288437355"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Theoretical\n",
+    "s_clean_room = stats.binom(num_of_students, .03).sf(0)\n",
+    "s_clean_room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02753"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#5b\n",
+    "#Experimental\n",
+    "breakroom = np.random.choice([1, 0], size= (100000, (num_of_students * 2)), p = [.03, .97])\n",
+    "clean_room = (breakroom.sum(axis=1)) == 0\n",
+    "clean_room.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.027483031992576134"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Theoretical\n",
+    "s_clean_room = stats.binom(num_of_students * 2, .03).cdf(0)\n",
+    "s_clean_room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00011"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#5c\n",
+    "#Experimental\n",
+    "breakroom = np.random.choice([1, 0], size= (100000, (num_of_students * 5)), p = [.03, .97])\n",
+    "clean_room = (breakroom.sum(axis=1)) == 0\n",
+    "clean_room.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00012521651388091245"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Theoretical\n",
+    "s_clean_room = stats.binom(num_of_students * 5, .03).cdf(0)\n",
+    "s_clean_room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.79902"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#6\n",
+    "#Experimental\n",
+    "customers = pd.Series(np.random.normal(15, 3, 100000))\n",
+    "order_time = (customers * 2) + 10\n",
+    "enough_time = (60 - order_time) > 15\n",
+    "enough_time.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7976716190363569"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Theoretical\n",
+    "s_order_time = 60 - (10 + 15)\n",
+    "s_enough_time = stats.norm(15 * 2, 3 * 2).cdf(s_order_time)\n",
+    "s_enough_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#7\n",
+    "from env import host, user, password\n",
+    "\n",
+    "url = f'mysql+pymysql://{user}:{password}@{host}/employees'\n",
+    "query = '''\n",
+    "SELECT *\n",
+    "FROM salaries s\n",
+    "WHERE emp_no IN (\n",
+    "    SELECT emp_no FROM dept_emp\n",
+    "    WHERE to_date > NOW()\n",
+    ") AND to_date > NOW()\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>from_date</th>\n",
+       "      <th>to_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>88958</td>\n",
+       "      <td>2002-06-22</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>72527</td>\n",
+       "      <td>2001-08-02</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10003</td>\n",
+       "      <td>43311</td>\n",
+       "      <td>2001-12-01</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>74057</td>\n",
+       "      <td>2001-11-27</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10005</td>\n",
+       "      <td>94692</td>\n",
+       "      <td>2001-09-09</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   emp_no  salary   from_date     to_date\n",
+       "0   10001   88958  2002-06-22  9999-01-01\n",
+       "1   10002   72527  2001-08-02  9999-01-01\n",
+       "2   10003   43311  2001-12-01  9999-01-01\n",
+       "3   10004   74057  2001-11-27  9999-01-01\n",
+       "4   10005   94692  2001-09-09  9999-01-01"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee_salary = pd.read_sql(query, url)\n",
+    "employee_salary.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.270614349252886"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#7a\n",
+    "#Experimental\n",
+    "less_than_60k = employee_salary.salary <= 60000\n",
+    "less_than_60k.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24385742480214423"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Theoretical\n",
+    "mean_salary = employee_salary.salary.mean()\n",
+    "std_salary = employee_salary.salary.std()\n",
+    "\n",
+    "s_less_than_60k = stats.norm(mean_salary, std_salary).cdf(60000)\n",
+    "s_less_than_60k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10863137379020839"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#7b\n",
+    "#Experimental\n",
+    "greater_than_95k = employee_salary.salary >= 95000\n",
+    "greater_than_95k.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09208819199804053"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Theoretical\n",
+    "s_greater_than_95k = stats.norm(mean_salary, std_salary).sf(95000)\n",
+    "s_greater_than_95k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-60-6cc9c30cbb4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#7b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#Experimental\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mgreater_than_95k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0memployee_salary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msalary\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m65000\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0memployee_salary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msalary\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m80000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mgreater_than_95k\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1476\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1477\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1478\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   1479\u001b[0m             \u001b[0;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1480\u001b[0m             \u001b[0;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
+   "source": [
+    "#7b\n",
+    "#Experimental\n",
+    "greater_than_95k = employee_salary.salary >= 65000 & employee_salary.salary <= 80000\n",
+    "greater_than_95k.mean()"
+   ]
   },
   {
    "cell_type": "code",
