--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -258,16 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.840834813897092"
+       "0.2    2.749214\n",
+       "0.3    2.844163\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,21 +279,21 @@
     "#Experimental\n",
     "#Same as above, but I used the 30th percentile to cover the 3rd decile\n",
     "grades = np.random.normal(3.0, .3, 100000)\n",
-    "pd.Series(grades).quantile(.30)"
+    "pd.Series(grades).quantile([.20, .30])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.842679846187588"
+       "array([2.74751363, 2.84267985])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,22 +302,22 @@
     "#Theoretical\n",
     "#I used the ppf to cover the bottom 30 percentile\n",
     "#Yes a 2.8 would barely qualify for a scholarship since it's 2.84 and below.\n",
-    "s_grades = stats.norm(3.0, .3).ppf(.30)\n",
+    "s_grades = stats.norm(3.0, .3).ppf([.20, .30])\n",
     "s_grades"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.494952025315167"
+       "0.9544"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,22 +327,23 @@
     "#Experimental\n",
     "#This was already answered above with the top 5 percent question\n",
     "# The student would be in the 95th percentile\n",
-    "grades = np.random.normal(3.0, .3, 100000)\n",
-    "pd.Series(grades).quantile(.95)"
+    "grades = np.random.normal(3.0, .3, 10000)\n",
+    "top_5 = 1 - (pd.Series(grades) >= 3.5)\n",
+    "top_5.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.4934560880854417"
+       "0.9522096477271853"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +351,7 @@
    "source": [
     "#Theoritcal\n",
     "#Same as above\n",
-    "s_grades = stats.norm(3.0, .3).ppf(.95)\n",
+    "s_grades = stats.norm(3.0, .3).cdf(3.5)\n",
     "s_grades"
    ]
   },
