--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -357,16 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.02204"
+       "0.14028"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,22 +378,22 @@
     "#Then I inputed the data provided to be 4326 attempts and the percent of success\n",
     "clicks = np.random.binomial(4326, .02, 100000)\n",
     "#After that, I wanted to return the odds of getting 97 clicks\n",
-    "one_day_clicks = clicks == 97\n",
+    "one_day_clicks = clicks >= 97\n",
     "one_day_clicks.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.02194293045425609"
+       "0.1397582363130086"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
    "source": [
     "#Theoretical\n",
     "#Same concept as above, but using the stats function for binomial and submitting the inputs to return the probability\n",
-    "s_clicks = stats.binom(4326, .02).pmf(97)\n",
+    "s_clicks = stats.binom(4326, .02).sf(96)\n",
     "s_clicks"
    ]
   },
@@ -869,10 +869,77 @@
     }
    ],
    "source": [
-    "#7b\n",
+    "#7c\n",
     "#Experimental\n",
-    "greater_than_95k = employee_salary.salary >= 65000 & employee_salary.salary <= 80000\n",
+    "greater_than_95k = employee_salary.salary >= 65000 employee_salary.salary <= 80000\n",
     "greater_than_95k.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.34270292, 0.67776349])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Theoretical\n",
+    "s_greater_than_95k = stats.norm(mean_salary, std_salary).cdf([65000, 80000])\n",
+    "s_greater_than_95k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104225.84999999998"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#7d\n",
+    "#Experimental\n",
+    "greater_than_95k = employee_salary.salary.quantile(.95)\n",
+    "greater_than_95k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100484.64454102777"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Theoretical\n",
+    "s_top_5_percent = stats.norm(mean_salary, std_salary).isf(.05)\n",
+    "s_top_5_percent"
    ]
   },
   {
