--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -852,54 +852,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-60-6cc9c30cbb4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#7b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#Experimental\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mgreater_than_95k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0memployee_salary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msalary\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m65000\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0memployee_salary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msalary\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m80000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mgreater_than_95k\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1476\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1477\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1478\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   1479\u001b[0m             \u001b[0;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1480\u001b[0m             \u001b[0;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
-     ]
-    }
-   ],
-   "source": [
-    "#7c\n",
-    "#Experimental\n",
-    "greater_than_95k = employee_salary.salary >= 65000 employee_salary.salary <= 80000\n",
-    "greater_than_95k.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.34270292, 0.67776349])"
+       "0.32515700221552196"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#7c\n",
+    "#Experimental\n",
+    "between_80k_and_65k = (employee_salary.salary >= 65000) & (employee_salary.salary <= 80000)\n",
+    "between_80k_and_65k.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3350605685446666"
+      ]
+     },
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Theoretical\n",
-    "s_greater_than_95k = stats.norm(mean_salary, std_salary).cdf([65000, 80000])\n",
-    "s_greater_than_95k"
+    "s_65k = stats.norm(mean_salary, std_salary).cdf(65000)\n",
+    "s_80k = stats.norm(mean_salary, std_salary).cdf(80000)\n",
+    "s_between_80k_and_65k = s_80k - s_65k\n",
+    "s_between_80k_and_65k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "104225.84999999998"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,13 +916,13 @@
    "source": [
     "#7d\n",
     "#Experimental\n",
-    "greater_than_95k = employee_salary.salary.quantile(.95)\n",
-    "greater_than_95k"
+    "top_5_percent = employee_salary.salary.quantile(.95)\n",
+    "top_5_percent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "100484.64454102777"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
