--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -212,8 +212,8 @@
    "source": [
     "## Has the network latency gone up since we switched internet service providers?\n",
     "\n",
-    "#H0 = the latency is > the mean of historical latency\n",
-    "#H1 = the latency is <= the mean of historical latency\n",
+    "#H0 = latency is present\n",
+    "#H1 = latency is not present\n",
     "\n",
     "#True Positive = latency is present with new internet provider and there is latency issues\n",
     "#Type I = latency is present with the new internet provider, but there is no latency\n",
@@ -242,13 +242,13 @@
    "source": [
     "# Is our television ad driving more sales?\n",
     "\n",
-    "#H0 = post ad sales > mean of pre ad sales\n",
-    "#H1 = post ad sales <= mean of pre ad sales\n",
+    "#H0 = mean of post ad sales > mean of pre ad sales\n",
+    "#H1 = mean of post ad sales <= mean of pre ad sales\n",
     "\n",
-    "#True Positive = post ad sales is well above mean of pre ad sales\n",
-    "#Type I = post ad sales is in between mean and standard deviation and above mean of pre ad sales\n",
-    "#Type II = post ad sales is in between mean and standard deviation and below mean of pre ad sales\n",
-    "#True Negative = post ad sales is well below mean of pre ad sales"
+    "#True Positive = mean of post ad sales is well above mean of pre ad sales\n",
+    "#Type I = mean of post ad sales is in between mean and standard deviation and above mean of pre ad sales\n",
+    "#Type II = mean of post ad sales is in between mean and standard deviation and below mean of pre ad sales\n",
+    "#True Negative = mean of post ad sales is well below mean of pre ad sales"
    ]
   },
   {
